[UPDATE] 拡張機能の設定を行います。

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,5 +5,13 @@
 		"--name",
 		"christmas-gift-exchange-assignment-python"
 	],
-	"remoteUser": "root"
+	"remoteUser": "root",
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"ms-python.isort",
+				"ms-python.autopep8"
+			]
+		}
+	}
 }
