--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,10 @@
 		"vscode": {
 			"extensions": [
 				"ms-python.isort",
-				"ms-python.autopep8"
+				"ms-python.autopep8",
+				"ms-python.python",
+				"ms-python.debugpy",
+				"ms-python.vscode-pylance"
 			]
 		}
 	},
