--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,8 +10,12 @@
 		"vscode": {
 			"extensions": [
 				"ms-python.isort",
-				"ms-python.autopep8"
+				"ms-python.autopep8",
+				"ms-python.python",
+				"ms-python.debugpy",
+				"ms-python.vscode-pylance"
 			]
 		}
-	}
+	},
+	"postCreateCommand": "pip install -r requirements.txt"
 }
