--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,21 @@
+annotated-types==0.7.0
+anyio==4.6.0
+click==8.1.7
+fastapi==0.115.0
+gitdb==4.0.11
+GitPython==3.1.41
+h11==0.14.0
+idna==3.10
+iniconfig==2.0.0
+packaging==24.0
+pluggy==1.5.0
+pydantic==2.9.2
+pydantic_core==2.23.4
 pytest==8.1.2
+setuptools==69.0.3
+smmap==5.0.1
+sniffio==1.3.1
+starlette==0.38.6
+typing_extensions==4.12.2
+uvicorn==0.31.0
+wheel==0.43.0
